# yfinance-analytics-stack

./: .gitignore  README.md  docker-compose.yml  example.env  main.py  profiles-example.yml  pyproject.toml  requirements.txt
app/: app.py
dags/: dag_yfinance.py  yfinance_ingestion.py
dbt_project/: dbt_project.yml
dbt_project/docs/: homepage.md
dbt_project/models/: schema.yml
dbt_project/models/gold/: fct_stocks_metrics.sql  schema.yml
dbt_project/models/silver/: schema.yml  stg_stocks.sql
