[project]
name = "yfinance-analytics-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.2.1",
    "dbt-core>=1.11.10",
    "dbt-postgres>=1.10.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "yfinance>=1.3.0",
]
